# sh26_hackaton

./: .gitignore  CLAUDE.md  README.md  analysis_report.md  data_audit.py  general.md  hackathon-brief-2026-06-10.md  overview_dashboard.py  pyproject.toml
app/: config.py  contracts.py
app/agents/: analyst.py  answer.py  critic.py  extractor.py  prompts.py  router.py  viz.py
app/api/: errors.py  main.py  parsing.py
app/api/static/: index.html
app/data/: db.py  executor.py  schema_card.py  views.sql
app/llm/: client.py
app/memory/: sessions.py
app/orchestrator/: pipeline.py
data/: _consistency_check.py
data/meridian_dwh/: _params.npz
docs/: api_contract.md  data_mart_legend.md  data_quality_notes.md  leaderboard.raw.txt  scoring_and_teams.md  yandex_ai_studio_conversations_api.md
docs/superpowers/plans/: 2026-06-11-dev-ui.md  2026-06-11-multiagent-analyst.md
docs/superpowers/specs/: 2026-06-11-dev-ui-design.md  2026-06-11-multiagent-analyst-design.md
site_scan/: dashboard_index.html  page_admin.html  page_case.html  page_check.html  page_data.html  page_pipeline.html  text_admin.txt  text_case.txt  text_check.txt  text_data.txt  text_pipeline.txt
tests/: conftest.py  test_analyst.py  test_answer.py  test_api.py  test_config.py  test_contracts.py  test_critic.py  test_db.py  test_executor.py  test_extractor.py  test_live_scenarios.py  test_llm_client.py  test_parsing.py  test_pipeline.py  test_prompts.py  test_router.py  test_schema_card.py  test_sessions.py  test_views.py  test_viz.py
